[tool.poetry]
name = "hru"
version = "1.0.0"
description = "Реализация модели Харрисона-Рузо-Ульмана"
authors = ["Baykanurov <vov_ef@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
